// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly with children 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="l3-style-menu dummy-class-name l3-style-menu--medium false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
>
  <div
    className="l3-style-menu-title"
  >
    <div
      className="polygon-main-container"
    >
      <div
        className="l3-style-avatar l3-style-avatar--small"
        style={Object {}}
      >
        <div
          className="polygon-main-container"
        >
          <svg
            className="svg"
          >
            <clipPath
              clipPathUnits="objectBoundingBox"
              id="my-clip-path"
            >
              <path
                d="M0.405,0.022 C0.465,-0.007,0.535,-0.007,0.595,0.022 L0.822,0.133 C0.881,0.162,0.923,0.215,0.937,0.278 L0.995,0.536 C1,0.598,0.994,0.663,0.955,0.714 L0.795,0.918 C0.754,0.97,0.691,1,0.625,1 H0.375 C0.309,1,0.246,0.97,0.205,0.918 L0.045,0.714 C0.006,0.663,-0.009,0.598,0.005,0.536 L0.063,0.278 C0.077,0.215,0.119,0.162,0.178,0.133 L0.405,0.022,NaN f, i, l0 lNaN u, r, p, a0 i, n, tNaN r, a0 d, i, a0 lNaN"
              />
            </clipPath>
          </svg>
          <div
            className="clipped"
          >
            <img
              className="l3-style-avatar-content_img l3-style-avatar-content_img--small"
            />
          </div>
        </div>
      </div>
    </div>
    <label
      className="l3-style-menu-title__caption l3-style-menu-title__caption--bottom menu-title-size__lg"
      contentEditable={true}
    >
      my title
    </label>
  </div>
  <li
    aria-current={false}
    className="l3-style-menu-item l3-style-menu-item--active"
    id="undefined-1"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="l3-style-menu-item__title"
    >
      item 1
      
    </div>
    
    <div
      className="l3-style-menu-item__popover"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
    <svg
      aria-hidden={false}
      aria-label="my bolt svg icon"
      className="icon_component icon_component--clickable"
      fill="none"
      height="40"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      viewBox="0 0 12 40"
      width="40"
    >
      <g
        filter="url(#filter0_bd_718_13661)"
      >
        <path
          d="M17 14L22.2929 19.2929C22.6834 19.6834 22.6834 20.3166 22.2929 20.7071L17 26"
          stroke="#fff"
          strokeLinecap="round"
          strokeWidth="2"
        />
      </g>
      <defs>
        <filter
          colorInterpolationFilters="sRGB"
          filterUnits="userSpaceOnUse"
          height="60"
          id="filter0_bd_718_13661"
          width="60"
          x="-10"
          y="-10"
        >
          <feFlood
            floodOpacity="0"
            result="BackgroundImageFix"
          />
          <feGaussianBlur
            in="BackgroundImageFix"
            stdDeviation="5"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
            result="effect1_backgroundBlur_718_13661"
          />
          <feColorMatrix
            in="SourceAlpha"
            result="hardAlpha"
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
          />
          <feOffset
            dy="1"
          />
          <feGaussianBlur
            stdDeviation="1.5"
          />
          <feColorMatrix
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
          />
          <feBlend
            in2="effect1_backgroundBlur_718_13661"
            result="effect2_dropShadow_718_13661"
          />
          <feBlend
            in="SourceGraphic"
            in2="effect2_dropShadow_718_13661"
            result="shape"
          />
        </filter>
      </defs>
    </svg>
  </li>
  <li
    aria-current={false}
    className="l3-style-menu-item l3-style-menu-item--active"
    id="undefined-2"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="l3-style-menu-item__title"
    >
      item 2
      
    </div>
    
    <div
      className="l3-style-menu-item__popover"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
    <svg
      aria-hidden={false}
      aria-label="my bolt svg icon"
      className="icon_component icon_component--clickable"
      fill="none"
      height="40"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      viewBox="0 0 12 40"
      width="40"
    >
      <g
        filter="url(#filter0_bd_718_13661)"
      >
        <path
          d="M17 14L22.2929 19.2929C22.6834 19.6834 22.6834 20.3166 22.2929 20.7071L17 26"
          stroke="#fff"
          strokeLinecap="round"
          strokeWidth="2"
        />
      </g>
      <defs>
        <filter
          colorInterpolationFilters="sRGB"
          filterUnits="userSpaceOnUse"
          height="60"
          id="filter0_bd_718_13661"
          width="60"
          x="-10"
          y="-10"
        >
          <feFlood
            floodOpacity="0"
            result="BackgroundImageFix"
          />
          <feGaussianBlur
            in="BackgroundImageFix"
            stdDeviation="5"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
            result="effect1_backgroundBlur_718_13661"
          />
          <feColorMatrix
            in="SourceAlpha"
            result="hardAlpha"
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
          />
          <feOffset
            dy="1"
          />
          <feGaussianBlur
            stdDeviation="1.5"
          />
          <feColorMatrix
            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
          />
          <feBlend
            in2="effect1_backgroundBlur_718_13661"
            result="effect2_dropShadow_718_13661"
          />
          <feBlend
            in="SourceGraphic"
            in2="effect2_dropShadow_718_13661"
            result="shape"
          />
        </filter>
      </defs>
    </svg>
  </li>
</ul>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="l3-style-menu dummy-class-name l3-style-menu--medium false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="l3-style-menu l3-style-menu--medium false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;
